CSS being added
Initial CSS, navbar completed

--- a/index.html
+++ b/index.html
@@ -6,24 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar">
-        <div class="logo">Header Logo</div>
-        <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-        <div class="title">
+        <div class="nav">
+            <div class="logo">Header Logo</div>
+            <ul class="links">
+                <a href="#">
+                    <li>header link one</li>
+                </a>
+                <a href="#">
+                    <li>header link two</li>
+                </a>
+                <a href="#">
+                    <li>header link three</li>
+                </a>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="title">
+        <div class="container">
             <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower
+                contrast.</p>
             <button>Sign up</button>
         </div>
+    </div>
 
-        <img src="../TOP-Landing-Page/img/kickflip.jpeg" alt="Black and White Kickflip">
-    </nav>
+    <img src="../TOP-Landing-Page/img/kickflip.jpeg" alt="Black and White Kickflip">
+
 
     <section class="main">
         <h2>Some random information.</h2>
@@ -44,7 +59,8 @@
     </section>
 
     <section class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</p>
         <h3>-Thor, God of Thunder</h3>
     </section>
 
