Fixed img issue

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button>Sign up</button>
             </div>
 
-            <img src="/img/buildings.avif" alt="Black and White Buildings">
+            <img src="../TOP-Landing-Page/img/buildings.avif" alt="Black and White Buildings">
 
         </div>
     </header>
